industries and contact us

--- a/contact-us.html
+++ b/contact-us.html
@@ -227,8 +227,8 @@
         <!-- <div class="container"> -->
             
 
-    <div class="container pt-1 mt-3 pb-5 mb-5 bg-blue" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
-    <!-- <div class="container pt-1 mt-3 pb-5 mb-5 bg-blue" > -->
+    <!-- <div class="container pt-1 mt-3 pb-5 mb-5 bg-blue" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800"> -->
+    <div class="container pt-1 mt-3 pb-5 bg-blue" >
         <div class="row px-4 bg-blue">
             <!-- contact us -->
             <div class="col-4 single-widget w-100 contact-widget text-grey bg-blue px-3" >
@@ -248,13 +248,14 @@
                     </li>
 
                     <!-- physical address -->
-                    <li class="list-group-item pb-0 pl-2 d-flex text-white bg-l-orange">
+                    <li class="list-group-item pb-0 pl-2 d-flex text-white bg-l-orange no-border">
                         <i class="fa fa-map-marker mr-2 text-white"></i>
                         <p class="m-0">24 David McLean Drive <br> Westville 3629 <br> Durban, South Africa</p>
                     </li>
 
                     <!-- social Icons -->
-                    <div class="single-widget subscribe-widget d-flex justify-content-start bg-l-orange pt-2" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">    
+                    <!-- <div class="single-widget subscribe-widget d-flex justify-content-start bg-l-orange pt-2" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">     -->
+                    <div class="single-widget subscribe-widget d-flex justify-content-start bg-l-orange pt-2">    
                         <ul class="nav social-nav pb-0 my-3">
                             <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook "></i></a></li>
                             <li><a href="#" target="_blank"><i class="fa fa-google-plus "></i></a></li>
@@ -294,8 +295,8 @@
                 </form>
             </div>
         </div>
+        </div>
     </div>
-        <!-- </div> -->
     <!-- </section> -->
     <!-- Trust End -->
 
@@ -306,9 +307,11 @@
     <!-- scroll to top end -->
 
     <!-- Footer Start -->
-    <footer class="d-none"> 
+    <footer class=""> 
+
+        <!-- hidden -->
         <!-- Widgets Start -->
-        <div class="footer-widgets py-4">
+        <div class="footer-widgets pb-2 pt-0 mt-0 d-none">
             <div class="container">
                 <div class="row">
                     <!-- short about -->
@@ -418,6 +421,13 @@
             </div>
         </div>
         <!-- Widgets End -->
+
+        <!-- footer strip -->
+        <div class="bg-white py-4">
+            <div class="container text-center d-flex justify-content-center">
+                <h3 class="light-sans mx-2"> In a World of Technology,</h3> <h3>Quality Designs </h3>  <h3 class="light-sans mx-2"> Makes a Difference.</h3>
+            </div>
+        </div>
 
         <!-- Foot Note Start -->
         <div class="foot-note py-3">
