--- a/industries.html
+++ b/industries.html
@@ -210,12 +210,14 @@
     </section>
     <!-- Hero End -->
 
-
-    <!-- new Industriesstart -->
-    <section id="" class="container">
-        <div class="top-text text-center text-primary my-3">
+    <div class="top-text text-center text-primary py-4 bg-grey">
+        <div class="container">
             <h2>We build industry solutions that dramatically increae sales, revenue, customer engagement and employee productivity</h2>
         </div>
+    </div>
+
+    <!-- new Industries start -->
+    <section id="" class="container">
 
         <div class="industries mt-3 pt-3 row">
             
@@ -573,7 +575,11 @@
     <!-- scroll to top end -->
 
     <!-- grey strip -->
-    <div class="strip mt-5"></div>
+    <div class="industry-strip text-white text-center py-4">
+        <h3>SPEAK TO AN EXPERT</h3>
+        <P>We'll need just a few details from you and one of our specialists will be in touch</P>
+        <a class="btn btn-primary " href="">GET IN TOUCH</a>
+    </div>
     <!-- grey strip -->
 
     <!-- Footer Start -->
