--- a/contact-us.html
+++ b/contact-us.html
@@ -269,7 +269,7 @@
             </div>
         
             <!-- contact form -->
-            <div class="col-8 contact-form single-widget subscribe-widget px-auto bg-blue">
+            <div id="contact-form" class="col-8 contact-form single-widget subscribe-widget px-auto bg-blue">
                 <h3 class="text-start bg-blue w-100 pt-2 text-white" ><span class="light-sans text-white">Leave Us A</span>  Message</h3>
                 <form class="row pt-2 ml-1 bg-grey" netlify >
                     <div class="input-group col-md-6 my-1">
