--- a/industries.html
+++ b/industries.html
@@ -578,7 +578,7 @@
     <div class="industry-strip text-white text-center py-4">
         <h3>SPEAK TO AN EXPERT</h3>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="">GET IN TOUCH</a>
+        <a class="btn btn-primary " href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
 
