--- a/products/consulting.html
+++ b/products/consulting.html
@@ -169,8 +169,142 @@
     </header>
     <!-- Header End -->
 
+
+    <div class=" consulting-page container-fluid">
+        <div class="header row bg-dark">
+            <div class="img px-0 col-lg-5">
+                <img src="../assets/images/heros/new/consulting.png" alt="">
+            </div>
+
+            <div class="col-lg-7 text d-flex align-items-end mb-3">
+                <h1 class="title text-primary">
+                    IT Advisory / Consulting
+                </h1>
+            </div>
+
+        </div>
+
+        <div class="container row py-4 mx-auto">
+            <!-- left -->
+            <div class="left col-lg-5 text-right text-primary">
+                <h3 >
+                    Effectively manage IT governance and risk while also ensuring business and regulatory compliance.
+                </h3>
+                <h3>
+                    Quality Designs helps organisations analyze, audit and manage their governance, risk and compliance
+                </h3>
+            </div>
+
+            <!-- right -->
+            <div class="col-lg-7 text-left">
+
+                <!-- Governance, Risk & Compliance -->
+                <div class="service border-bottom border-secondary">
+                    <div class="d-flex my-3" >
+                        <img class="" src="../assets/images/services icons/IT Advisory _ Consulting/Gorvenance .png" alt="">
+                        <h4 class="text-dark pl-3 my-auto">Governance, Risk & Compliance</h4>
+                    </div>
+
+                    <p>
+                        Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments.
+                    </p>
+
+                    <div class="text-right mr-3">
+                        <a href="#" class="text-right">Read More</a>
+                    </div>
+                </div>
+
+                <!-- Big Data & Analytics -->
+                <div class="service border-bottom border-secondary">
+                    <div class="d-flex my-3" >
+                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Big Data.png" alt="">
+                        <h4 class="text-dark pl-3 my-auto">Big Data & Analytics </h4>
+                    </div>
+
+                    <p>
+                        Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments.
+                    </p>
+
+                    <div class="text-right mr-3">
+                        <a href="#" class="text-right">Read More</a>
+                    </div>
+                </div>
+
+                <!-- Strategy -->
+                <div class="service border-bottom border-secondary">
+                    <div class="d-flex my-3" >
+                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Strategy.png" alt="">
+                        <h4 class="text-dark pl-3 my-auto">Strategy </h4>
+                    </div>
+
+                    <p>
+                        Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments.
+                    </p>
+
+                    <div class="text-right mr-3">
+                        <a href="#" class="text-right">Read More</a>
+                    </div>
+                </div>
+
+                <!-- Program Management -->
+                <div class="service border-bottom border-secondary">
+                    <div class="d-flex my-3" >
+                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Program Management.png" alt="">
+                        <h4 class="text-dark pl-3 my-auto">Program Management </h4>
+                    </div>
+
+                    <p>
+                        Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments.
+                    </p>
+
+                    <div class="text-right mr-3">
+                        <a href="#" class="text-right">Read More</a>
+                    </div>
+                </div>
+
+                <!-- Internet Of Things -->
+                <div class="service border-bottom border-secondary">
+                    <div class="d-flex my-3" >
+                        <img src="../assets/images/services icons/IT Advisory _ Consulting/IoT.png" alt="">
+                        <h4 class="text-dark pl-3 my-auto"> Internet Of Things</h4>
+                    </div>
+
+                    <p>
+                        Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments.
+                    </p>
+
+                    <div class="text-right mr-3">
+                        <a href="#" class="text-right">Read More</a>
+                    </div>
+                </div>
+
+                <!-- Artificial Intelligence -->
+                <div class="service border-bottom border-secondary">
+                    <div class="d-flex my-3" >
+                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Artificial Intelligence .png" alt="">
+                        <h4 class="text-dark pl-3 my-auto">Artificial Intelligence </h4>
+                    </div>
+
+                    <p>
+                        Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments.
+                    </p>
+
+                    <div class="text-right mr-3">
+                        <a href="#" class="text-right">Read More</a>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- hidden  -->
     <!-- Hero Start -->
-    <section class="hero product-hero hero-sm">
+    <section class="hero product-hero hero-sm d-none">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
@@ -213,8 +347,9 @@
     <!-- Hero End -->
 
 
+    <!-- hidden  -->
     <!-- Consulting Trust Start -->
-    <section id="consulting" class="trust pt-0 pb-0 mt-0 bg-white" style="border-top: solid 0.5rem #F0640C ; ">
+    <section id="consulting" class="trust pt-0 pb-0 mt-0 bg-white d-none" style="border-top: solid 0.5rem #F0640C ; ">
         <div class="service-spacer"></div>
         <div class="container" >
             <div class="row">
@@ -344,8 +479,16 @@
     <!-- scroll to top end -->
 
     <!-- strip -->
-    <div class="strip"></div>
+    <!-- <div class="strip"></div> -->
     <!-- strip -->
+
+    <!-- grey strip -->
+    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
+        <h3>SPEAK TO AN EXPERT</h3>
+        <P>We'll need just a few details from you and one of our specialists will be in touch</P>
+        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+    </div>
+    <!-- grey strip -->
     <!-- Footer Start -->
     <footer>
         <!-- Widgets Start -->
